[package]
name = "webpage"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

[dependencies]
warp = "0.2.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.47"
tokio = { version = "0.2.11", features = ["macros"] }
tera = "1.0.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"
syntect = "3.3.0"
lazy_static = "1.4.0"