[package]
name = "families-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
probe-rs-target = "0.20"
serde_yaml = "0.9"
askama = "0.12"
bytesize = { version = "1.1.0", features = ["serde"] }
